--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 </head>
 <body>
 
+Interactive version of figures for the paper "Python 3 Types in the Wild: A Tale of Two Type Systems", accepted at ACM SIGPLAN Dynamic Languages Symposium (DLS 2020)
+  
 <p><a href="list.html">Statistic and information of 2,678 repositories</a></p>
 <p><a href="gen.html">Query used to capture python files from GitHub repositories.</a></p>
 
